v1.3.0 updates
